[package]
name = "take_sni"
version = "0.1.4"
edition = "2021"
description = "just parse sni from buf"
license = "MIT"
repository = "https://github.com/Cergoo/take_sni"
categories = ["parsing"]
documentation = "https://docs.rs/take_sni"
readme = "README.md"

[dependencies]
parcelona = { path="../parcelona", version ="0.1" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
